docs: create sigup docs
