# handlers/auth.go
@@ -50,42 +50,6 @@ func Login(c *gin.Context) {
 	sendSuccess(c, "sigin", gin.H{"token": token})
 }
 
-func CreateUserHandler(ctx *gin.Context) {
-	request := CreateUserRequest{}
-
-	ctx.BindJSON(&request)
-
-	if err := request.Validate(); err != nil {
-		logger.Errorf("validation error: %v", err.Error())
-		sendError(ctx, http.StatusBadRequest, err.Error())
-		return
-	}
-
-	hashedPassword, err := HashPassword(request.Password)
-	if err != nil {
-		sendError(ctx, http.StatusInternalServerError, "Error processing password")
-		return
-	}
-
-	accountNumer := generateAccountNumer()
-
-	user := schemas.User{
-		Name:     request.Name,
-		Password: hashedPassword,
-		CPF:      request.CPF,
-		Account:  accountNumer,
-		Wallet:   request.Wallet,
-	}
-
-	if err := db.Create(&user).Error; err != nil {
-		logger.Errorf("error create opening %v", err.Error())
-		sendError(ctx, http.StatusInternalServerError, err.Error())
-		return
-	}
-
-	sendSuccess(ctx, "create-user", user)
-}
-
 func GenetareJWT(id uint, username string) (string, error) {
 	token := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
 		"user_id":  id,
